--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^4.9.1",
     "mongoose": "^6.5.4",
     "morgan": "^1.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19",
     "path": "^0.12.7",
     "serve-favicon": "^2.5.0"
