--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.2",
-    "express": "^4.16.4",
+    "express": "^4.18.1",
     "express-session": "^1.17.3",
     "fs": "^0.0.1-security",
     "hbs": "^4.0.6",
